DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-09-2003 patrickh    Refactored the CORBA-based remote run-time
                        reconfiguration code so that it can be loaded at
                        run-time as a plug-in.
                        NEW VERSION: 0.14.0
Nov-04-2003 patrickh    Removed the storage of multiple versions of individaul
                        configuration definitions in
                        jccl::ConfigDefinitionRepository.
                        NEW VERSION: 0.13.0
Oct-15-2003 aronb       Added automatic ConfigElement upgrades using XSLT.
Oct-10-2003 aronb       Added multiple inheritance for config element
                        definitions.
Oct-06-2003 patrickh    Added jccl::ConfigElement::getVersion().
                        NEW VERSION: 0.12.3
Aug-16-2003 patrickh    Updated to Tweek 0.15.
                        NEW VERSION: 0.12.2
Aug-15-2003 aronb       Fixed RTRC so that it now works with vrjconfig.
                        NEW VERSION: 0.12.1
Jul-10-2003 patrickh    Removed the ConfigUpdater utility.
Jul-10-2003 nonchocoboy Merged everything from jccl_config_refactor_branch.
                        Among other things, this officially renames "config
                        chunk" to "config element" and "chunk desc" to
                        "config definition."  The configuration and definition
                        file formats have changed extensively as part of this.
                        NEW VERSION: 0.12.0
Jun-03-2003 browner     Removed the perfMonitor stuff so we could rewrite it
                        from scratch.
                        NEW VERSION: 0.11.0
May-20-2003 patrickh    configure.in requries Autoconf 2.53 or newer.
May-06-2003 patrickh    Restored the ability to read symbolic values from
                        configuration files where value enumerations are used.
                        NEW VERSION: 0.10.1